feat: update routes and apidocs
