# packages/backend/public/apidocs/openapi-spec.yaml
@@ -76,3 +76,11 @@ paths:
     $ref: 'paths/teams.yaml'
   /team/{name}:
     $ref: 'paths/team_name.yaml'
+  /team/{teamName}/{userName}:
+    $ref: 'paths/team_teamname_username.yaml'
+  /join-team/{teamName}:
+    $ref: 'paths/join-team_teamname.yaml'
+  /accept-invite/{teamName}:
+    $ref: 'paths/accept-invite_teamname.yaml'
+  /invite/{teamName}/{userName}:
+    $ref: 'paths/invite_teamname_username.yaml'
